mapbox control-group style fixings on mobile

--- a/client/src/assets/scss/components/map-styles.scss
+++ b/client/src/assets/scss/components/map-styles.scss
@@ -22,6 +22,10 @@
     color: inherit;
     background-color: darken($white-full, 20%);
   }
+
+  @media screen and (max-width: 320px) and (max-height: 580px) {
+    bottom: 6.4rem;
+  }
 }
 
 ul[role='group'] {
